15-Db_secgroup.tf
resource "aws_security_group" "db_sec" {
  name        = "DB"
  description = "Allow TLS inbound traffic"

  vpc_id = "${aws_vpc.myperfect_vpc.id}" 
  tags = "${var.tags}"
 
  
  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

ingress {
    description = "TLS from VPC"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
